re PR rtl-optimization/8750 (Cygwin prolog generation erroneously emitting __alloca as regular function call)

PR optimization/8750
        * config/i386/i386.c (ix86_expand_prologue): Don't allow
        scheduling pass to move insns across __alloca call.

From-SVN: r61069